Updates from Overleaf

--- a/00_config/metadata.tex
+++ b/00_config/metadata.tex
@@ -19,7 +19,7 @@
 \newcommand{\zweitbetreuer}{Dipl.-Ing. Tim Brandt}
 
 % ===== TERMINE =====
-\newcommand{\abgabedatum}{15. Dezember 2025}
+\newcommand{\abgabedatum}{12. Januar 2026}
 \newcommand{\bearbeitungszeitraum}{Juli 2025 -- Dezember 2025}
 
 % ===== THEMA UND SCHWERPUNKTE =====
