--- a/02_mainmatter/ch6_Fazit.tex
+++ b/02_mainmatter/ch6_Fazit.tex
@@ -4,8 +4,7 @@
 \section{Zusammenfassung der Ergebnisse}
 \label{sec:summary}
 
-\section{Beitrag zur Forschung und Praxis}
-\label{sec:contribution}
-
 \section{Weiterer Forschungsbedarf}
 \label{sec:further research}
+
+- Infrastrukturbau
