--- a/02_mainmatter/ch1_Einleitung.tex
+++ b/02_mainmatter/ch1_Einleitung.tex
@@ -6,10 +6,7 @@
 \section{Forschungslücke und Forschungsfrage}
 \label{ch:1.2}
 
-\section{Abgrenzung der Arbeit}
-\label{ch:1.3}
-
-- erforderlich?
-
 \section{Aufbau der Arbeit}
 \label{ch: 1.4}
+
+\clearpage
