--- a/02_mainmatter/ch1_Einleitung.tex
+++ b/02_mainmatter/ch1_Einleitung.tex
@@ -1,12 +1,24 @@
 \chapter{Einleitung}
 \label{ch:einleitung}
-\section{Motivation und Zielsetzung der Arbeit}
+\section{Problemstellung und Relevanz}
 \label{ch:1.1}
 
-\section{Forschungslücke und Forschungsfrage}
+\section{Zielsetzung und Forschungsfrage}
 \label{ch:1.2}
 
-\section{Aufbau der Arbeit}
-\label{ch: 1.4}
+\section{Methodisches Vorgehen und Aufbau der Arbeit}
+\label{ch: 1.3}
+
+Die Arbeit beginnt im vorliegenden \cref{ch:einleitung} mit der Herleitung der Problemstellung sowie der Formulierung der zentralen Forschungsfrage.
+
+Darauf aufbauend legt \cref{ch:grundlagen} die theoretischen Grundlagen und definiert die für die Untersuchung essenziellen Begrifflichkeiten.
+
+Im Kapitel wird das methodische Vorgehen sowie das Forschungsdesign zur Beantwortung der Fragestellung detailliert erläutert.“
+
+Den Schwerpunkt der Arbeit bildet \cref{ch:analyse}, in dem die eigentliche Analyse durchgeführt und die empirischen Ergebnisse präsentiert werden.
+
+Anschließend diskutiert \cref{ch:transfer} die gewonnenen Erkenntnisse kritisch und ordnet sie in den aktuellen Forschungsstand ein.
+
+Abgeschlossen wird die Untersuchung in \cref{ch:conclusion} mit einer Zusammenfassung der zentralen Ergebnisse sowie einem Ausblick auf weiteren Forschungsbedarf.
 
 \clearpage
