--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -167,7 +167,7 @@ Der Auswahlprozess relevanter Literatur stützt sich auf das international anerk
 
 \clearpage
 
-\subsection{Schritt 1: Identifizierung}
+\subsection*{Schritt 1: Identifizierung}
 Im ersten Schritt der Literaturrecherche wurden zunächst relevante zunächst relevante Datenbanken identifiziert. Dabei wurden die Quellen in drei Arten untergliedert:
 
 1. Größe - International \& Interdisziplinär
@@ -238,7 +238,7 @@ Diese Vorgehensweise stellt sicher, dass in jeder durchgeführten Suche alle rel
 
 \FloatBarrier
 
-\subsection{Schritt 2: Screening}
+\subsection*{Schritt 2: Screening}
 Die im folgenden aufgeführten Einschränkungen sollen die Ergebnisse aus der initialen Suchanfrage filtern:
 
 \textbf{Sprache:} \\
@@ -276,18 +276,16 @@ Die Auswertung der im Rahmen der in \cref{sec: 3.2} beschriebenen Literaturreche
 \section{Kontextanalyse und Ableitung des Transferleitfadens}
 \label{sec: 3.4}
 
-\subsection{Einleitung \& Zielsetzung}
-\label{sec: 3.4.1}
-Nachdem im vorangegangenen Schritt das idealtypische Prozessmodell des Target Value Design konstruiert wurde, erfolgt nun dessen systematischer Abgleich mit den spezifischen Rahmenbedingungen der deutschen Baupraxis, um die Grundlage für den Transferleitfaden zu schaffen.\\
+Nachdem im vorangegangenen Schritt das idealtypische Prozessmodell des Target Value Design konstruiert wurde, erfolgt nun dessen systematischer Abgleich mit den spezifischen Rahmenbedingungen der deutschen Baupraxis, um die Grundlage für den Transferleitfaden zu schaffen.
 
-Ziel: Bewertung der Übertragbarkeit des in \cref{sec: 3.3} entwickelten idealtypischen \ac{TVD}-Prozesses auf die deutsche Baupraxis\\
+Ziel: Bewertung der Übertragbarkeit des in \cref{sec: 3.3} entwickelten idealtypischen \ac{TVD}-Prozesses auf die deutsche Baupraxis
 
-Prozess: Dazu sollen in einer Gegenüberstellung beider Prozesse, die Übereinstimmungen (Fit) und Abweichungen (Gap) zwischen \ac{TVD} und den Rahmenbedingungen der deutschen Baupraxis herausgearbeitet werden.\\
+Prozess: Dazu sollen in einer Gegenüberstellung beider Prozesse, die Übereinstimmungen (Fit) und Abweichungen (Gap) zwischen \ac{TVD} und den Rahmenbedingungen der deutschen Baupraxis herausgearbeitet werden.
 
-Ergebnis: Die aus den identifizierten Reibungspunkten abgeleiteten, notwendigen Anpassungen werden in Form eines Transferleitfadens zusammengeführt um so eine Empfehlung für die Anwendung von \ac{TVD} in Deutschland zu liefern.\\
+Ergebnis: Die aus den identifizierten Reibungspunkten abgeleiteten, notwendigen Anpassungen werden in Form eines Transferleitfadens zusammengeführt um so eine Empfehlung für die Anwendung von \ac{TVD} in Deutschland zu liefern.
 
 \subsection{Methodischer Ansatz: Framework Analysis}
-\label{sec: 3.4.2}
+\label{sec: 3.4.1}
 
 Für die Fit-Gap Analyse wurde sich an der Framework Analysis orientiert, da diese eine strukturierte qualitative Gegenüberstellung vorhandener Konzepte und Rahmenbedingungen ermöglicht. \hl{Initial wurde die Framework Analysis Methode von Ritchie \& Spencer (1994) für den Breich der angewandten Policy-Foschung entwickelt\autocite[Vgl.][S.2]{gale_using_2013} und in den folgenden Jahren durch Ritchie et. al (2014) und Gale et. al (2013) weiter verfeinert und modernisiert.}\\
 Für die Anwendung der Framework Analysis wurde das Vorgehen in Anlehnung an Gale et al. (2013) adaptiert.
@@ -308,7 +306,7 @@ Die Analyse folgt daher einer reduzierten, konzeptionellen Form des Verfahrens, 
 % Beide zeigen, dass Framework Analysis auch dokument- oder theoriebasiert angewandt werden kann – nicht nur auf Interviewdaten.
 %
 \subsection{Durchführung der Analyse}
-\label{sec: 3.4.3}
+\label{sec: 3.4.2}
 
 Die Ausführung der Framework Analyse folgt dem im vorherigen Abschnitt skizzierten Ablauf.
 Vergleichsgrundlage bilden hier die in \cref{sec: 3.3} identifizierten Merkmale des idealtypischen  \ac{TVD}-Prozesses sowie die Regelwerke welche die deutsche Baupraxis im wesentlichen prägen (\acs{HOAI},\acs{VOB},\acs{AHO}, \cref{sec: 2.1})
@@ -320,7 +318,7 @@ Schritte:\\
 Ergebnis: eine systematische Fit-Gap-Analyse als Grundlage des Transferleitfadens.
 
 \subsection{Ableitung des Transferleitfadens}
-\label{sec: 3.4.4}
+\label{sec: 3.4.3}
 
 
 \clearpage
