--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -1,19 +1,19 @@
 \chapter{Analyse und Modellierung}
-\label{ch:4}
+\label{ch:analyse}
 \section{Das Phasenmodell}
 \label{sec:4.1}
 
-Eine Betrachtung der einschlägigen Fachliteratur zeigt, dass Target Value Design (TVD) im Gegensatz zur deutschen \ac{HOAI} nur selten als lineares Prozessmodell mit starren Phasen dargestellt wird. Der Fokus der Forschung liegt primär auf den zugrundeliegenden Prinzipien, Rollenbildern und Entscheidungslogiken sowie auf der kulturellen Transformation der Zusammenarbeit.\autocite[vgl.]{zimina_target_2012} \autocite[vgl.]{ballard_target_2025}
+Eine Betrachtung der einschlägigen Fachliteratur zeigt, dass Target Value Design (TVD) im Gegensatz zur deutschen \ac{HOAI} nur selten als lineares Prozessmodell mit starren Phasen dargestellt wird. Der Fokus der Forschung liegt primär auf den zugrundeliegenden Prinzipien, Rollenbildern und Entscheidungslogiken sowie auf der kulturellen Transformation der Zusammenarbeit.\autocite[vgl.]{zimina_target_2012}\, \autocite[vgl.]{ballard_target_2025}
 
-Diese Abwesenheit eines einheitlichen und normierten Phasenmodells lässt sich auf die inhärente Logik des \ac{TVD}-Ansatzes zurückführen. Zum einen versteht sich \ac{TVD} in erster Linie als Managementphilosophie und nicht als formales Leistungsbild. Weiterhin wird \ac{TVD} in der Praxis meist als methodische Ergänzung in bestehende lokale Vertragsmodelle wie das US-amerikanische \ac{IPD} oder britische \acl{PA}-Modelle integriert\autocite[vgl.]{z.B. Fischer et al. 2017, Mossman oder LCI Guide}, wodurch es sich der jeweiligen Prozessstruktur anpasst, anstatt eine eigene Struktur vorzugeben. Zudem widerspricht eine rein lineare Abwicklung der zyklischen sowie iterativen Natur des TVD-Prozesses, der maßgeblich von Rückkopplungsschleifen bestimmt wird.
+Diese Abwesenheit eines einheitlichen und normierten Phasenmodells lässt sich auf die inhärente Logik des \ac{TVD}-Ansatzes zurückführen. Zum einen versteht sich \ac{TVD} in erster Linie als Managementphilosophie und nicht als formales Leistungsbild. Weiterhin wird \ac{TVD} in der Praxis meist als methodische Ergänzung in bestehende lokale Vertragsmodelle wie das US-amerikanische \ac{IPD} oder britische \acl{PA}-Modelle  \autocite[vgl.]{z.B. Fischer et al. 2017, Mossman oder LCI Guide}, wodurch es sich der jeweiligen Prozessstruktur anpasst, anstatt eine eigene Struktur vorzugeben. Zudem widerspricht eine rein lineare Abwicklung der zyklischen sowie iterativen Natur des \ac{TVD}-Prozesses, der maßgeblich von Rückkopplungsschleifen bestimmt wird.
 
-Um im Rahmen dieser Arbeit dennoch untersuchen zu können, wie kompatibel TVD mit den stark formalisierten deutschen Abläufen ist, muss ein idealtypisches Phasenmodell konstruiert werden. Dieses Modell dient nicht als neuer Standardvorschlag für die Praxis. Es fungiert vielmehr als analytisches Hilfsmittel, um Unterschiede und Gemeinsamkeiten überhaupt messbar zu machen.
+Um im Rahmen dieser Arbeit dennoch untersuchen zu können, wie kompatibel \ac{TVD} mit den stark formalisierten deutschen Abläufen ist, muss ein idealtypisches Phasenmodell konstruiert werden. Dieses Modell dient nicht als neuer Standardvorschlag für die Praxis. Es fungiert vielmehr als analytisches Hilfsmittel, um Unterschiede und Gemeinsamkeiten messbar zu machen.
 
-Für die weitere Untersuchung wird ein Modell mit vier Phasen zugrunde gelegt. Es verbindet das Prozess-Schema nach Ballard \autocite[vgl.]{ballard_target_2012} mit dem Phasenmodell des \acl{LCI}.\autocite[vgl.]{hill_target_2017} Diese Struktur weist zudem deutliche Parallelen zum deutschen Modell der Integrierten Projektabwicklung (IPA) auf. Ein wesentlicher Unterschied in der Modellierung liegt jedoch in der Gewichtung der Validierung: Während das hier genutzte TVD-Modell der Validierung aufgrund ihrer zentralen Steuerungsfunktion eine eigenständige Phase widmet (Phase 1), verortet das IPA-Modell diesen Prozessschritt meist integrativ zu Beginn der Planungsphase. Die zugrundeliegende Logik, dass keine Realisierung ohne gesicherte Zielkosten erfolgt, ist beiden Ansätzen jedoch gemein.\autocite[vgl. S.8]{haghsheno_ipa-report_2025}
+Für die weitere Untersuchung wird ein Modell mit vier Phasen zugrunde gelegt. Es verbindet das Prozess-Schema nach Ballard\,\autocite[vgl.]{ballard_target_2012} mit dem Phasenmodell des \acl{LCI}.\autocite[vgl.]{hill_target_2017} Diese Gliederung weist zudem deutliche Parallelen zum deutschen Modell der Integrierten Projektabwicklung (IPA) auf. Ein wesentlicher Unterschied liegt jedoch in der Gewichtung der Validierung: Während das hier genutzte TVD-Modell der Validierung aufgrund ihrer zentralen Steuerungsfunktion eine eigenständige Phase widmet (Phase 1), verortet das IPA-Modell diesen Prozessschritt integrativ zu Beginn der Planungsphase. Die zugrundeliegende Logik, dass keine Realisierung ohne gesicherte Zielkosten erfolgt, ist beiden Ansätzen jedoch gemein.\autocite[vgl. S.8]{haghsheno_ipa-report_2025}
 
-Während das Modell des Lean Construction Institute die Phasen Design (Planung) und Construction (Ausführung) häufig unter dem Begriff \enquote{Value Delivery} zusammenfasst\autocite[vgl.]{hill_target_2017}, nimmt das hier entwickelte Modell eine bewusste analytische Trennung zwischen Phase 2 (Design) und Phase 3 (Realisierung) vor. Diese Unterscheidung erfolgt aus methodischen Gründen. Sie ermöglicht im späteren Transferkapitel einen präzisen Vergleich mit der in Deutschland durch \acs{VOB} und \ac{HOAI} verankerten Trennung von Planung und Ausführung (vgl. Abbildung \ref{fig:phasenvergleich}). Gleichzeitig bleibt die für \ac{TVD} essenzielle Phase der Validierung als eigenständiger Abschnitt erhalten.
+Während das Modell des Lean Construction Institute die Phasen Design (Planung) und Construction (Ausführung) häufig unter dem Begriff \enquote{Value Delivery} zusammenfasst\autocite[vgl.]{hill_target_2017}, nimmt das vorgeschlagene Modell eine bewusste Trennung zwischen Phase 2 (Design) und Phase 3 (Realisierung) vor. Diese Unterscheidung erfolgt aus methodischen Gründen. Sie ermöglicht im späteren Transferkapitel einen präzisen Vergleich mit der in Deutschland durch \acs{VOB} und \ac{HOAI} verankerten Trennung von Planung und Ausführung (vgl. Abbildung \ref{fig:phasenvergleich}). Gleichzeitig bleibt die für \ac{TVD} essenzielle Phase der Validierung als eigenständiger Abschnitt erhalten.
 
-Das zugrunde gelegte Modell gliedert sich folglich in:
+Das zugrunde gelegte Modell gliedert sich demnach wie folgt:
 \begin{itemize}[leftmargin=2em]
     \item \textbf{Phase 0}: Projektinitiierung (Project Definition)
     \item \textbf{Phase 1}: Validierung und Zielsetzung (Validation)
@@ -23,7 +23,9 @@ Das zugrunde gelegte Modell gliedert sich folglich in:
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=1.0\textwidth]{05_figures/HOAI vs. TVD Phasen Vergleich .jpg}
+     \fcolorbox{gray!50}{white}{%
+    \includegraphics[width=\dimexpr\textwidth-2\fboxsep-2\fboxrule\relax]{05_figures/HOAI vs. TVD Phasen Vergleich .jpg}%
+    }
     
     \caption[Vergleich HOAI und TVD]{Vergleich der HOAI-Leistungsphasen mit dem idealtypischen TVD-Phasenmodell (Quelle: Eigene Darstellung).}
     \label{fig:phasenvergleich}
